--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
     <groupId>ch.zhaw.roma</groupId>
     <artifactId>RoMa</artifactId>
     <version>1.0-SNAPSHOT</version>
-
-    
+    <dependencies>
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.0.Final</version>
+            <type>pom</type>
+        </dependency>
+    </dependencies>
 </project>
