--- a/pom.xml
+++ b/pom.xml
@@ -26,5 +26,10 @@
             <version>5.4.0.Final</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>com.thoughtworks.xstream</groupId>
+            <artifactId>xstream</artifactId>
+            <version>1.4.11.1</version>
+        </dependency>
     </dependencies>
 </project>
