--- a/pom.xml
+++ b/pom.xml
@@ -43,5 +43,10 @@
             <artifactId>poi</artifactId>
             <version>4.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.2.5</version>
+        </dependency>
     </dependencies>
 </project>
