--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,12 @@
             <version>4.0.1</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.odftoolkit</groupId>
+            <artifactId>odftoolkit</artifactId>
+            <version>0.6.2-incubating</version>
+            <type>pom</type>
+        </dependency>
+        <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
             <version>4.0.1</version>
