--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
     <dependencies>
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-core</artifactId>
+            <artifactId>hibernate-entitymanager</artifactId>
             <version>5.4.0.Final</version>
             <type>pom</type>
         </dependency>
