--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,11 @@
         </plugins>
     </build>
     <dependencies>
+            <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.0.Final</version>
+        </dependency>
         <dependency>
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-entitymanager</artifactId>
